[package]
name = "network"
version = "0.2.0"
authors = ["Rivtower Technologies <anhuitianyu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = { version = "1", features = ["gzip"] }
clap = "3.0.0-beta.2"
git-version = "0.3"
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
tonic = "0.5"
prost = "0.8"
futures = "0.3"
tokio = "1.5"
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto",branch = "master" }
anyhow = "1.0"
rand = "0.8"
libp2p = { version = "0.39", features = ["tcp-tokio"] }
transfer = {path = "./transfer"}

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
